<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.dell.jdnstprvosmnst.MainActivity">

    <Button
        android:id="@+id/prvo_dugme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/prvo_dugme" />

    <TextView
        android:id="@+id/zbir"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="center_horizontal"
        android:hint="@string/zbir"
        android:textSize="18sp" />

    <Button
        android:id="@+id/drugo_dugme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/drugo_dugme" />

    <TextView
        android:id="@+id/random_broj"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="center"
        android:hint="@string/random"
        android:textSize="18sp" />

    <Button
        android:id="@+id/trece_dugme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/trece_dugme" />
    
</LinearLayout>
